Forsøk på å redusere minnebruken.